Actualización OpenApi + Funcionalidades Adaptadas
- He vuelto a actualizar el .yaml y todas las funcionalidades.
