# src/main/java/com/alia/back_end_service/api_rest/classification/ClassificationMapperAPI.java
@@ -1,8 +1,8 @@
 package com.alia.back_end_service.api_rest.classification;
 
-import com.alia.back_end_service.api_model.ParticipationDTO;
+import com.alia.back_end_service.api_model.ClassificationResponseDTO;
 import com.alia.back_end_service.domain.classification.Classification;
 
 public interface ClassificationMapperAPI {
-    ParticipationDTO toApiResponse(Classification classification);
+    ClassificationResponseDTO toApiResponse(Classification classification);
 }
