# src/main/java/com/alia/back_end_service/api_rest/game/GameMapperAPI.java
@@ -1,10 +1,10 @@
 package com.alia.back_end_service.api_rest.game;
 
-import com.alia.back_end_service.api_model.MatchDTO;
+import com.alia.back_end_service.api_model.MatchResponseDTO;
 import com.alia.back_end_service.domain.game.Game;
 import com.alia.back_end_service.domain.league.League;
 
 
 public interface GameMapperAPI {
-    MatchDTO toApiResponse(Game game);
+    MatchResponseDTO toApiResponse(Game game);
 }
