# src/main/java/com/alia/back_end_service/api_rest/league/LeagueApiDelegateImpl.java
@@ -27,22 +27,22 @@ public class LeagueApiDelegateImpl implements LeagueApiDelegate {
     private final LeagueGetAllPortAPI leagueGetAllPortAPI;
     private final LeagueMapperAPI leagueMapperAPI;
     private final LeagueInscribeBotPortAPI leagueInscribeBotPortAPI;
-    private final LeagueGetAllBotsPortAPI leagueGetAllBotsPortAPI;
     private final LeagueStartPortAPI leagueStartPortAPI;
     private final LeagueDeletePortAPI leagueDeletePortAPI;
     private final LeagueUpdatePortAPI leagueUpdatePortAPI;
     private final LeagueGetAllGamesPortAPI leagueGetAllGamesPortAPI;
+    private final LeagueGetAllByUserPortAPI leagueGetAllByUserPortAPI;
     private final GameMapperAPI gameMapperAPI;
 
 
     @Override
-    public ResponseEntity<LeagueDTO> leagueLeagueIdDelete(Integer leagueId) {
+    public ResponseEntity<LeagueResponseDTO> leagueLeagueIdDelete(Integer leagueId) {
         leagueDeletePortAPI.deleteLeague(leagueId);
         return ResponseEntity.status(HttpStatus.OK).build();
     }
 
     @Override
-    public ResponseEntity<LeagueDTO> leagueLeagueIdGet(Integer leagueId) {
+    public ResponseEntity<LeagueResponseDTO> leagueLeagueIdGet(Integer leagueId) {
         return ResponseEntity.ok(leagueMapperAPI.toApiResponse(leagueGetPortAPI.getLeague(leagueId)));
     }
 
@@ -56,26 +56,31 @@ public class LeagueApiDelegateImpl implements LeagueApiDelegate {
 
 
     @Override
-    public ResponseEntity<List<LeagueDTO>> leagueGet() {
-        List<League> leagues = leagueGetAllPortAPI.getAllLeagues();
-        List<LeagueDTO> leaguesDTOs = new ArrayList<>();
+    public ResponseEntity<List<LeagueResponseDTO>> leagueGet(String owner) {
+        List<League> leagues;
 
-        for (League league : leagues) {
-            leaguesDTOs.add(leagueMapperAPI.toApiResponse(league));
+        if (owner != null && !owner.isBlank()) {
+            leagues = leagueGetAllByUserPortAPI.getAllLeaguesByUser(owner);
+        } else {
+            leagues = leagueGetAllPortAPI.getAllLeagues();
         }
+
+        List<LeagueResponseDTO> leaguesDTOs = leagues.stream()
+                .map(leagueMapperAPI::toApiResponse)
+                .toList();
 
         return ResponseEntity.ok(leaguesDTOs);
     }
 
     @Override
-    public ResponseEntity<List<ParticipationDTO>> leagueLeagueIdLeaderboardGet(Integer leagueId) {
+    public ResponseEntity<List<ClassificationResponseDTO>> leagueLeagueIdLeaderboardGet(Integer leagueId) {
         return LeagueApiDelegate.super.leagueLeagueIdLeaderboardGet(leagueId);
     }
 
     @Override
-    public ResponseEntity<List<MatchDTO>> leagueLeagueIdMatchGet(Integer leagueId) {
+    public ResponseEntity<List<MatchResponseDTO>> leagueLeagueIdMatchGet(Integer leagueId) {
         List<Game> games = leagueGetAllGamesPortAPI.getAllLeagueGames(leagueId);
-        List<MatchDTO> matchesDTOs = new ArrayList<>();
+        List<MatchResponseDTO> matchesDTOs = new ArrayList<>();
 
         for (Game game : games) {
             matchesDTOs.add(gameMapperAPI.toApiResponse(game));
@@ -89,10 +94,6 @@ public class LeagueApiDelegateImpl implements LeagueApiDelegate {
         return ResponseEntity.status(HttpStatus.OK).build();
     }
 
-    @Override
-    public ResponseEntity<List<LeagueDTO>> leagueOwneruserIdGet(String userId) {
-        return LeagueApiDelegate.super.leagueOwneruserIdGet(userId);
-    }
 
     @Override
     public ResponseEntity<Void> leaguePost(LeagueDTO leagueDTO) {
